# video

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .travis.yml  AUTHORS  CONTRIBUTING.rst  LICENSE  README.rst  noxfile.py  pyproject.toml  readthedocs.yaml  setup.cfg  setup.py  test-requirements.txt  test.ipynb  tox.ini
.github/workflows/: release.yaml  unit.yaml
docs/: conf.py  contribute.rst  index.rst  quickstart.rst
docs/_static/: custom.css  test.html  video.webm  video.webm:Zone.Identifier
sphinxcontrib/: __init__.py  video.py
sphinxcontrib/video/: __init__.py
tests/: conftest.py  test_build.py
tests/roots/test-video/: conf.py  index.rst  mp4.rst  mp4_options.rst
tests/roots/test-video-secondary/: conf.py  index.rst  mp4.rst  mp4_secondary.rst
tests/roots/test-video-warnings/: index.rst  wrong_controlslist.rst  wrong_format.rst  wrong_height.rst  wrong_preload.rst  wrong_width.rst
tests/roots/test-video-warnings/_static/: video.mkv
tests/test_build/: video_no_options.html  video_options.html  video_secondary.html  video_wrong_format.html
