[build-system]
requires = ["setuptools>=61.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sphinxcontrib-video"
version = "0.0.0"
description = "Allows embedding of HTML5 videos in sphinx"
requires-python = ">=3.6.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Documentation",
    "Topic :: Utilities",
]

[[project.authors]]
name = "Raphael Massabot"
email = "rmassabot@gmail.com"

[project.license]
text = "Apache Software License"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
repository = "https://github.com/sphinx-contrib/video"

[project.optional-dependencies]
dev = ["nox"]
test = ["pytest"]
doc = ["Sphinx"]

[tool.setuptools]
include-package-data = false
license-files = ["LICENSE"]
